# running-game

./: .gitignore  README.md  pyproject.toml
src/: background.py  constants.py  game.py  main.py  obstacles.py  player.py  ui.py  utils.py
